# Ai_trip

./: Makefile  README.md  credentials.env.sample  itinerary.md  pyproject.toml
config/: agents.yaml  base_models.py  config.py  tasks.yaml
src/: crews.py  inputs.py  main.py  search_tool.py  tasks.py
src/TripCrew/: crew.py  main.py
src/TripCrew/config/: agents.yaml  base_models.py  config.py  tasks.yaml
src/frontend/: Makefile  app.py  pyproject.toml
src/tripcrew/: Makefile  crew.py  itinerary.md  itinerary2.md  main.py
src/tripcrew/config/: base_models.py  tasks.yaml
src/tripcrew/tools/: google_api.py
tools/: google_api.py  google_places.py  google_places_tool.py
